<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/ScrollView01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Suit"
            android:textSize="10pt"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Type"/>

                <Spinner
                    android:id="@+id/suit_form_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Date In Use"/>

                <EditText
                    android:id="@+id/suit_form_dateInUse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="0000-00-00"
                    android:inputType="date"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gear_manufacturer"/>

        <EditText
            android:id="@+id/suit_form_manufacturer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Model"/>

        <EditText
            android:id="@+id/suit_form_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"></EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Serial"/>

        <EditText
            android:id="@+id/suit_form_serial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"></EditText>

        <Button
            android:id="@+id/suit_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="save"
            android:text="Save"/>

    </LinearLayout>
</ScrollView>