<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="mavonie.subterminal.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ProgressBar
                android:id="@+id/toolbar_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:indeterminateTint="@color/primary_light"
                android:indeterminateTintMode="src_in"
                android:visibility="gone" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/flContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:elevation="@dimen/default_elevation"
        app:backgroundTint="@color/primary"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <com.sa90.materialarcmenu.ArcMenu
        android:id="@+id/arcMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clipChildren="false"
        android:visibility="gone"
        app:menu_color="@color/primary"
        app:menu_open="arc_left"
        app:menu_radius="100dp"
        app:menu_scr="@android:drawable/ic_menu_add">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/gear_menu_suit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:src="@android:color/transparent"
                app:backgroundTint="@color/primary_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="16dp"
                android:text="Suit"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary_text" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/gear_menu_rig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:src="@android:color/transparent"
                app:backgroundTint="@color/primary_light" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="16dp"
                android:text="Rig"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary_text" />
        </FrameLayout>

    </com.sa90.materialarcmenu.ArcMenu>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
